--- a/yu-picture-frontend/index.html
+++ b/yu-picture-frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <link rel="icon" href="/src/assets/favicon.ico">
+    <meta name="鱼图云图库，海量素材免费获取" content="width=device-width, initial-scale=1.0">
+    <title>鱼图云图库</title>
   </head>
   <body>
     <div id="app"></div>
